load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:defs.bzl", "nt_rust_binary", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# ADR-MCPS-048 / MCPS-69 — these HITL live-cloud KMS tests are intentionally
# cargo-only (no Bazel target): each is `#![cfg(feature = "…kms…")]` + `#[ignore]`
# and runs ONLY in the manual live-infra lane (`cargo test --features … --
# --ignored` against real AWS/GCP KMS):
#   tests/aws_kms_live_test.rs, tests/gcp_kms_live_test.rs,
#   tests/gcp_kms_draft02_live_test.rs, tests/gcp_kms_delegated_tls_live_test.rs
# NOTE: gazelle_rust's `generate_from_cargo` mode enumerates test targets from
# Cargo metadata, so `# gazelle:exclude <file>` does NOT suppress them — gazelle
# will always PROPOSE a target for each in `-mode diff`. This is a documented
# advisory-diff false-positive; MCPS-70's staleness gate must allowlist them (and
# not auto-adopt gazelle write output wholesale). Do NOT add Bazel targets here.

# Single source of truth for the mcp_re_proxy library sources. The default
# `:mcp_re_proxy` library and the feature-flavored `:mcp_re_proxy_fault` /
# `:mcp_re_proxy_dev_env` instances (each a full rebuild of the same crate under a
# `#[cfg(feature = ...)]` fault/dev gate) ALL compile this exact file set — sharing
# the list here prevents the instances from silently drifting apart.
_PROXY_LIB_SRCS = [
    # ADR-MCPS-022: explicit authorized server key-set + per-audience response-
    # signing identity mode (per_node_keyset / shared_remote_signer).
    "src/authorized_keyset.rs",
    # ADR-MCPS-028 §B: native AWS KMS Ed25519 response signer (blocking ureq HTTPS +
    # minimal audited SigV4; behind #[cfg(feature = "aws_kms_keysource")], cfg'd out
    # of the default build). No async aws-sdk-kms/tokio (ADR-MCPS-018 lean-sync).
    "src/aws_kms_keysource.rs",
    "src/aws_sigv4.rs",
    "src/cli.rs",
    # ADR-MCPRE-051 §6 (MCPRE-116): versioned serving-config snapshot + in-process
    # CRL hot-reloader. Pure std; always compiled by every flavor.
    "src/config_snapshot.rs",
    # ADR-MCPS-028 §C: native GCP Cloud KMS Ed25519 response signer (blocking ureq
    # HTTPS + OAuth2 bearer; behind #[cfg(feature = "gcp_kms_keysource")], cfg'd out
    # of the default build). No async google-cloud SDK (ADR-MCPS-018 lean-sync).
    "src/gcp_kms_keysource.rs",
    # Issue #3838 (ADR-MCPS-014): non-exporting reference ResponseSigner proving the
    # response-signing delegation seam. Always compiled; default-build, Bazel-tested.
    "src/delegated_response_signer.rs",
    # ADR-MCPS-028 §G: delegated TLS handshake signing (rustls SigningKey fronting a
    # non-exporting device/KMS). Generic mechanism, always compiled.
    "src/delegated_tls.rs",
    "src/durable_replay.rs",
    "src/key_source.rs",
    # ADR-MCPS-028: provider-agnostic cloud-KMS response signer core (the shared
    # protocol mapping behind the #3838 delegation seam). Always compiled.
    "src/kms_keysource.rs",
    "src/lib.rs",
    # Inner-server lifecycle logging seam (transport-agnostic; used by the async
    # dispatch path). Split out of inner_launch so it stays in the PEP when the
    # stdio subprocess machinery relocates to mcp-re-stdio-bridge.
    "src/log_sink.rs",
    # Test / embedding helpers that drive the async serving path synchronously
    # (a private current-thread runtime per call). Not a serving path.
    "src/test_support.rs",
    "src/proxy.rs",
    # Issue #4034: PKCS#11/HSM-backed KeySource (behind #[cfg(feature =
    # "pkcs11_keysource")]; cfg'd out of the default build).
    "src/pkcs11_keysource.rs",
    # Issue #4034 supply-chain follow-up: the OWNED safe wrapper over the raw
    # cryptoki-sys FFI bindings (replaces the high-level cryptoki crate +
    # transitive unmaintained `paste`). Same `pkcs11_keysource` feature gate.
    "src/pkcs11_native.rs",
    # Issue #4030: online OCSP client-cert revocation (behind #[cfg(feature =
    # "online_ocsp")]; cfg'd out of the default build).
    "src/ocsp.rs",
    # Issue #4028: Redis-backed shared atomic ReplayCache (behind #[cfg(feature =
    # "redis_replay")]; cfg'd out of the default build).
    "src/redis_store.rs",
    # Issue #69 (epic #68 v0.4 Axis 1): etcd-backed CP / LINEARIZABLE shared atomic
    # ReplayCache (behind #[cfg(feature = "cpstore_etcd")]; cfg'd out of the default
    # build).
    "src/etcd_store.rs",
    # ADR-MCPRE-051 §4: the ASYNC etcd authoritative replay backend (hyper over the
    # v3 JSON gateway; same `cpstore_etcd` gate). The linearizable durable tier the
    # async serving fleet awaits.
    "src/async_etcd_store.rs",
    # ADR-MCPS-020: declared replay-store durability tier (deployment assertion).
    "src/replay_tier.rs",
    # MCPRE-104 (#308): proxy replay-tier adapter around the HTTP-profile dispatcher
    # (ReplayDurabilityTier gate layered above the dispatcher's core single-process
    # gate; tier type stays in the proxy).
    "src/http_profile_dispatch.rs",
    # ADR-MCPS-021 Axis 2: declared revocation tier (Tier 1 bounded-cache / Tier 2
    # live / Tier 3 push) — semantic names + honest per-tier guarantee. Pure type.
    "src/revocation_tier.rs",
    # ADR-MCPS-021 Tier 2: live strong trust check (no positive caching, optional
    # second live revocation authority, fail-closed on outage).
    "src/live_trust.rs",
    # ADR-MCPS-021 Tier 3: push-invalidation trust cache (bounded-T cache + injected
    # invalidation channel; bounded-T fallback when the channel is unhealthy).
    "src/push_trust.rs",
    # Issue #3837: shared, server-side-atomic replay cache (backend-agnostic core +
    # in-memory reference store). Always compiled; default-build, Bazel-tested.
    "src/shared_replay.rs",
    "src/tls.rs",
    # ADR-MCPRE-051 (MCPRE-118): the async serving path is UNCONDITIONAL — it is the
    # PEP's sole serving path, so every flavor compiles it and links the async stack
    # (the `async_serve` feature is a vestigial no-op; no code gates on it). This
    # supersedes the ADR-MCPS-018 §1 lean-sync firewall for the proxy serving path;
    # `mcp-re-core` stays pure.
    "src/async_serve.rs",
    # MCPRE-113 (ADR-MCPRE-051 §1): the per-core serving fleet (per-core tokio
    # runtimes + SO_REUSEPORT listeners + Linux CPU pinning) — the production data
    # plane.
    "src/async_fleet.rs",
    # MCPRE-117 (ADR-MCPRE-051 §4): the async authoritative replay tier (async store
    # contract + L1-never-Fresh wrapper) — the only replay path.
    "src/async_replay.rs",
    # ADR-MCPRE-051 §3: the async inner-server seam — the only inner path; the
    # serving path awaits it (a stdio server is fronted by mcp-re-stdio-bridge over HTTP).
    "src/async_inner.rs",
    # ADR-MCPRE-051 §3: the production async inner plane — pooled hyper client to
    # stateless Streamable-HTTP inner backends.
    "src/http_inner.rs",
    # MCPRE-117 (ADR-MCPRE-051 §4): the async Redis authoritative replay backend
    # (SET NX PX over the tokio async client). #[cfg(feature = "redis_replay")] —
    # cfg'd out of the default build; the ext flavor + the cargo redis lane link it,
    # and main.rs selects it for `--replay-cache shared` (non-linearizable tier).
    "src/async_redis_store.rs",
    "src/transport.rs",
    # ADR-MCPS-021: bounded trust-propagation cache (revocation window T).
    "src/trust_cache.rs",
    # MCPS-84 (ADR-MCPS-049 W2): trust-epoch invalidation source (Redis reader is
    # redis_replay-gated inside the module).
    "src/trust_epoch.rs",
]

# ADR-MCPRE-051 (MCPRE-118): the async serving path is now UNCONDITIONAL — the proxy
# serves only on the per-core async fleet, so every library flavor AND the CLI/ext
# binaries link the async stack (supersedes the ADR-MCPS-018 §1 lean-sync firewall
# for the proxy serving path). Single source of truth for the async crate set.
_PROXY_ASYNC_CRATES = [
    "@crates_mcp_re//:tokio",
    "@crates_mcp_re//:tokio-rustls",
    "@crates_mcp_re//:hyper",
    "@crates_mcp_re//:hyper-util",
    "@crates_mcp_re//:http-body-util",
    "@crates_mcp_re//:bytes",
]

# Single source of truth for the mcp_re_proxy library deps. All three library
# instances compile the SAME `_PROXY_LIB_SRCS`, so they MUST link the same crates —
# they differ ONLY by `crate_features`. Sharing the list here prevents per-instance
# dep drift (which previously left `:mcp_re_proxy_fault` / `:mcp_re_proxy_dev_env`
# pointing at a removed `rustls-pemfile` and missing `zeroize`).
_PROXY_LIB_DEPS = [
    "//mcp-re-core:mcp_re_core",
    "//mcp-re-policy:mcp_re_policy",
    # MCPRE-104 (#308): the pure HTTP-profile dispatcher the proxy replay-tier
    # adapter (src/http_profile_dispatch.rs) wraps. Pure crate — mcp-re-core only,
    # no reverse proxy dependency.
    "//mcp-re-http-profile:mcp_re_http_profile",
    # MCPS-58 (ADR-023 §A1): CRL parsing for the static --client-crl freshness gate.
    "@crates_mcp_re//:der",
    "@crates_mcp_re//:libc",
    "@crates_mcp_re//:rustls",
    "@crates_mcp_re//:rustls-pki-types",
    "@crates_mcp_re//:serde_json",
    "@crates_mcp_re//:thiserror",
    "@crates_mcp_re//:x509-cert",
    "@crates_mcp_re//:x509-parser",
    # MCPS-076 (audit gap G-3): scrub raw-seed temporaries in key_source.
    "@crates_mcp_re//:zeroize",
] + _PROXY_ASYNC_CRATES

# Issue #4028/#4030/#4034: deps for the all-external-backends library flavor.
# _PROXY_LIB_DEPS + the optional backend crates (enabled together by the three
# feature flags) + the Linux sandbox select. The default `:mcp_re_proxy` does NOT
# use this — only `:mcp_re_proxy_ext` and its tests do, so the default closure
# stays lean (ADR-MCPS-018).
# The optional backend crates as a PLAIN list (no select) — nt_rust_test's `deps`
# cannot contain a select(), so test targets reuse this and inherit the
# target-gated sandbox crates transitively via the linked `:mcp_re_proxy_ext`.
_PROXY_EXT_CRATES = [
    # #4034 supply-chain fix: the raw PKCS#11 FFI bindings (libloading only, no
    # transitive `paste`). The high-level `cryptoki` crate is replaced by the
    # owned safe wrapper in src/pkcs11_native.rs.
    "@crates_mcp_re//:cryptoki-sys",
    "@crates_mcp_re//:redis",
    "@crates_mcp_re//:ureq",
    # ADR-MCPS-028 §B: SigV4 HMAC-SHA256 + KMS standard-base64 message/signature
    # encoding for the AWS KMS Ed25519 signer (feature aws_kms_keysource).
    "@crates_mcp_re//:hmac",
    "@crates_mcp_re//:base64",
    "@crates_mcp_re//:x509-ocsp",
    # NOTE: der + x509-cert moved to _PROXY_LIB_DEPS — the base crate's static-CRL
    # freshness gate (MCPS-58, tls.rs) now uses them, so ext inherits them via LIB.
    "@crates_mcp_re//:spki",
    "@crates_mcp_re//:sha2",
    # #4063 (MCPS-088): OS CSPRNG for the per-request OCSP nonce.
    "@crates_mcp_re//:getrandom",
    # #4063 (MCPS-088): asn1-rs BitString for the responder-signature verify path
    # (part of the online_ocsp module; linked by every ext flavor).
    "@crates_mcp_re//:asn1-rs",
]

_PROXY_EXT_DEPS = _PROXY_LIB_DEPS + _PROXY_EXT_CRATES

# The three Mac-buildable external-backend features, enabled together by the
# `:mcp_re_proxy_ext` flavor and its tests. (Sandbox enforcement is target-gated,
# not feature-gated, so it is NOT in this list.)
_PROXY_EXT_FEATURES = [
    "pkcs11_keysource",
    "redis_replay",
    # #69 (epic #68 v0.4 Axis 1): etcd-backed CP / LINEARIZABLE shared replay store.
    "cpstore_etcd",
    "online_ocsp",
    # ADR-MCPS-028 §B: native AWS KMS Ed25519 response signer.
    "aws_kms_keysource",
    # ADR-MCPS-028 §C: native GCP Cloud KMS Ed25519 response signer.
    "gcp_kms_keysource",
]

# MCPS-029 (folds in MCPS-018 #3807): the production sidecar CLI. Terminates TLS,
# verifies object signatures + (optional) authz + transport binding, forwards to
# an inner MCP server subprocess, signs responses. Blocking; no async runtime.
nt_rust_binary(
    name = "mcp_re_proxy_cli",
    srcs = ["src/main.rs"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        # #220 (ADR-MCPS-048): main.rs uses mcp_re_core directly (e.g.
        # `mcp_re_core::ReplayDurabilityClass`), so it must link mcp-re-core — the Cargo
        # build resolved this transitively/by-manifest but the Bazel binary target
        # never listed it, which is the head of the #220 fail-to-build cascade.
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-policy:mcp_re_policy",
        # MCPS-88 (ADR-MCPS-049 W3): main.rs installs a SIGTERM/SIGINT handler via
        # libc::sigaction for graceful drain, so the binary must link libc (the
        # Cargo build resolves it by manifest; the Bazel binary target must list it).
        "@crates_mcp_re//:libc",
        # MCPRE-116 (ADR-MCPRE-051 §6): main.rs names rustls_pki_types cert/key types
        # in the CRL hot-reload task signature.
        "@crates_mcp_re//:rustls-pki-types",
        # ADR-MCPRE-051 (MCPRE-118): main.rs now drives the per-core async fleet and
        # builds the redis-replay control runtime directly (tokio::runtime), and
        # constructs the HttpInnerPool — so the binary links the async stack.
    ] + _PROXY_ASYNC_CRATES,
)

# MCPS-015/016: server-side sidecar library. Pure — depends only on the
# verification crate plus serde_json. Transport is layered on by the conformance
# harnesses (MCPS-017); the stdio-first binary entry arrives there too.
nt_rust_library(
    name = "mcp_re_proxy",
    srcs = _PROXY_LIB_SRCS,
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS,
)

# MCPS-079 — a SEPARATE library instance of mcp-re-proxy built WITH the fault
# feature, so the faulted CLIENT verifier is compiled into the fault-injection
# test. The default `:mcp_re_proxy` above is never built with this feature;
# production and the default `bazel test //...` link only the verifying instance.
nt_rust_library(
    name = "mcp_re_proxy_fault",
    srcs = _PROXY_LIB_SRCS,
    crate_features = ["fault_accept_any_client"],
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS,
)

# MCPS-079 — fault injection ("test of the tests"), the symmetric mirror of
# mcp-re-transport's fault_injection_test. Runs on EVERY `bazel test //...` (NOT
# `manual`) so the control can never silently rot. It DELIBERATELY breaks the
# CLIENT-authentication control by compiling both the library dep AND this test
# with `--features fault_accept_any_client`, then drives the SAME scenarios as
# tls_test's T1 (missing client cert) and T2 (untrusted client cert) and asserts
# the OPPOSITE outcome — the handshake now COMPLETES and the inner handler is
# reached — proving those rejection guards are load-bearing. The feature is off by
# default and only this separate `:mcp_re_proxy_fault` instance turns it on; the
# production `:mcp_re_proxy` / CLI are never built with it.
nt_rust_test(
    name = "fault_injection_test",
    srcs = ["tests/fault_injection_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["fault_accept_any_client"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_fault",  # keep
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# MCPS-024: in-crate unit tests (transport-binding abstraction: identity, provider
# seam, ExactMatch/Mapped binding policies). MCPS-076 adds the default-build
# fail-closed proof for build_key_source(KeySourceKind::Env).
nt_rust_test(
    name = "proxy_unit_test",
    crate = ":mcp_re_proxy",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-policy:mcp_re_policy",
        "@crates_mcp_re//:libc",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:zeroize",
    ],
)
# MCPRE-104 (#308): the proxy replay-tier adapter around the HTTP-profile
# dispatcher, driven end-to-end (sub-minimum tier refused, wait-quorum/linearizable
# admitted, verify→dispatch→sign→verify e2e, core single-process gate beneath).
nt_rust_test(
    name = "http_profile_dispatch_test",
    srcs = ["tests/http_profile_dispatch_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
    ],
)
# MCPS-027: KeySource (File + Env) — signing key + TLS cert/key + client-CA.
nt_rust_test(
    name = "key_source_test",
    srcs = ["tests/key_source_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# MCPS-076 (audit gap G-3): a SEPARATE library instance of mcp-re-proxy built WITH
# the dev-only `dev_env_key_source` feature, so `EnvKeySource` (and the dev arm of
# build_key_source) is compiled into the dev test below. The default `:mcp_re_proxy`
# ADR-MCPRE-051 (MCPRE-118): the async serving path is now UNCONDITIONAL, so the
# async crates live in `_PROXY_LIB_DEPS` and this flavor is a thin alias of the base
# (the vestigial `async_serve` feature is a no-op — no code gates on it anymore).
# Retained so the async test targets' `:mcp_re_proxy_async  # keep` dep edges stay
# stable (MCPS-69) without a churny repoint.
nt_rust_library(
    name = "mcp_re_proxy_async",
    srcs = _PROXY_LIB_SRCS,
    crate_features = ["async_serve"],
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS,
)
# ADR-MCPRE-051 §3 (Phase 3): the async HTTP inner-plane transport suite — proves
# HttpInnerPool delivers a verified JSON-RPC request to a stateless HTTP backend
# (an in-process hyper server, no external infra) and returns its JSON response
# bytes verbatim, with fail-closed on dead backend / non-2xx / oversize.
nt_rust_test(
    name = "http_inner_test",
    srcs = ["tests/http_inner_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "@crates_mcp_re//:bytes",
        "@crates_mcp_re//:http-body-util",
        "@crates_mcp_re//:hyper",
        "@crates_mcp_re//:hyper-util",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:tokio",
    ],
)
# MCPRE-117 (ADR-MCPRE-051 §4, Phase 2): async replay tier SEAM suite — proves the
# per-core L1 fast-rejects known replays without ever manufacturing a Fresh
# (L1-never-Fresh), L1 eviction is safe, an L2 outage fails closed + recovers, and
# cross-core many-tiers-over-one-L2 admit EXACTLY ONE Fresh under concurrency. On the
# in-memory reference backend; async Redis/etcd live cross-replica is the infra lane.
nt_rust_test(
    name = "async_replay_test",
    srcs = ["tests/async_replay_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:tokio",
    ],
)
# ADR-MCPRE-050 local round-trip: RFC 9421 client -> production HttpProfileProxy
# (verify -> dispatch -> sign) -> verify, plus the cross-request replay rejection,
# entirely in-process (in-memory async replay tier, no listener/Redis).
nt_rust_test(
    name = "rfc9421_round_trip_test",
    srcs = ["tests/rfc9421_round_trip_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["async_serve"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_async",  # keep
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:tokio",
    ],
)
# ADR-MCPRE-051 §7 load/SLO harness. `manual`: it stands up a primary+2-replica
# Redis fleet via Docker (or an external MCP_RE_LOADGEN_REDIS_URL), which the Bazel
# test sandbox cannot provide — so it is excluded from `bazel test //...` and driven
# by cargo / the GKE runbook. Built against the redis_replay ext flavor.
nt_rust_test(
    name = "tls_load_harness_bench",
    srcs = ["tests/tls_load_harness_bench.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    tags = ["manual"],
    data = [
        ":mcp_re_proxy_cli",
    ],
    edition = "2021",
    env = {
        "MCP_RE_PROXY_CLI": "$(rlocationpath :mcp_re_proxy_cli)",
    },
    env_inherit = [
        "MCP_RE_LOADGEN_CONCURRENCY",
        "MCP_RE_LOADGEN_REQUESTS",
        "MCP_RE_LOADGEN_MODE",
        "MCP_RE_LOADGEN_HW_CLASS",
        "MCP_RE_LOADGEN_CORES",
        "MCP_RE_LOADGEN_OUT",
        "MCP_RE_LOADGEN_REDIS_URL",
    ],
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",  # #220 (ADR-048): source imports this crate
        ":mcp_re_proxy_ext",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-host:mcp_re_host",
        "@crates_mcp_re//:bytes",
        "@crates_mcp_re//:http-body-util",
        "@crates_mcp_re//:hyper",
        "@crates_mcp_re//:hyper-util",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:tokio",
    ],
)
# above is NEVER built with this feature; production and the production CLI link
# only the env-LESS instance. This instance is built on every `bazel test //...`
# (NOT `manual`) so it can never silently fail to compile.
nt_rust_library(
    name = "mcp_re_proxy_dev_env",
    srcs = _PROXY_LIB_SRCS,
    crate_features = ["dev_env_key_source"],
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_LIB_DEPS,
)

# MCPS-076 (audit gap G-3): the dev-only EnvKeySource + secret-hygiene proofs. Built
# WITH the `dev_env_key_source` feature (so EnvKeySource exists) and linked against
# the matching `:mcp_re_proxy_dev_env` instance. Runs on EVERY `bazel test //...`
# (NOT `manual`) so the dev-feature path can never silently rot.
# Proves: the env source signs + REMOVES the env var after read; KeyError never
# leaks the seed; and the canonical zeroize-on-drop heap-scrub check.
nt_rust_test(
    name = "dev_env_key_source_test",
    srcs = ["tests/dev_env_key_source_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["dev_env_key_source"],
    edition = "2021",
    deps = [
        ":mcp_re_proxy_dev_env",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:zeroize",
    ],
)
# ADR-MCPRE-050 mTLS transport binding: the RFC 9421 signer bound to the presented
# TLS client cert (RFC 8705 x5t#S256), proven over a REAL mutual-TLS handshake —
# the production server config + the mcp-re-transport client presenting a cert; the
# negotiated peer leaf DER is fed into verify_request_full. Positive (own channel),
# relayed-onto-a-different-channel, and plain-HTTP-no-cert all fail closed.
nt_rust_test(
    name = "mtls_transport_binding_test",
    srcs = ["tests/mtls_transport_binding_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "//mcp-re-transport:mcp_re_transport",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# MCPS-025: RustlsDirectProvider — identity extraction (URI/DNS/CN priority) +
# a full blocking mTLS round-trip (certs minted in-process via rcgen).
nt_rust_test(
    name = "tls_test",
    srcs = ["tests/tls_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_proxy",
        # ADR-MCPS-028 §G: the delegated-TLS handshake test signs with a local
        # mcp-re-core Ed25519 key standing in for the device/KMS.
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)
# ===========================================================================
# Phase 7 external backends (#4028 Redis, #4030 OCSP, #4034 PKCS#11, #4039
# Linux sandbox). A SINGLE library flavor builds all three Mac-buildable
# optional features together so the adapters are Bazel-built on every run; the
# default `:mcp_re_proxy` links none of them. The Linux sandbox enforcement is
# target-gated (compiled into ALL flavors on Linux via _PROXY_LINUX_SANDBOX_DEPS,
# excluded on Mac), so it needs no feature flavor.
# ===========================================================================
nt_rust_library(
    name = "mcp_re_proxy_ext",
    srcs = _PROXY_LIB_SRCS,
    crate_features = _PROXY_EXT_FEATURES,
    crate_name = "mcp_re_proxy",
    edition = "2021",
    deps = _PROXY_EXT_DEPS,
)

# Inline #[cfg(feature = ...)] unit tests for the external backends (ocsp.rs
# network-free codec/policy tests + the RFC 6960 §3.2 responder-SIGNATURE
# acceptance tests, cli.rs feature-gated flag tests, redis/pkcs11 inline tests).
# Built WITH the production external-backend features against the ext flavor so
# they actually compile + run on every `bazel test //...` (Mac included).
#
# #4063 (MCPS-088, closes #4030): the OCSP responder-SIGNATURE verifier
# (x509-parser/verify, the ring-backed algorithm-agnostic RSA+ECDSA verifier) is
# part of the `online_ocsp` module itself — `x509-parser/verify` is enabled
# unconditionally at the workspace level — so the SHIPPING `online_ocsp` build
# performs the real §3.2 trust chain. These acceptance tests (real signed Good →
# ADMIT; forged/wrong-key/unsigned → DENY) therefore exercise the SAME production
# code path the `online_ocsp` build ships, NOT a separate flavor. The in-tree
# Ed25519 signer (ed25519-dalek) only mints the signed fixtures.
nt_rust_test(
    name = "proxy_ext_unit_test",
    crate = ":mcp_re_proxy_ext",  # keep
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    deps = _PROXY_LIB_DEPS + _PROXY_EXT_CRATES + [
        "@crates_mcp_re//:rcgen",
        # #4063 (MCPS-088): the in-tree Ed25519 signer used to mint a genuinely
        # signed OCSP response fixture for the admit/forge acceptance tests.
        "@crates_mcp_re//:ed25519-dalek",
    ],
)

# #4028: cross-node replay rejection over a SHARED Redis. Self-skips (prints +
# passes) unless MCP_RE_TEST_REDIS_URL is set, so it is green without a live Redis
# yet proves multi-node safety when one is provided (Mac: `brew install redis`).
nt_rust_test(
    name = "redis_replay_e2e_test",
    srcs = ["tests/redis_replay_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        # CI opt-in: when set, a missing-infra SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
        # MCPS-090: the live PTTL test probes PTTL on the exact key the cache
        # inserted, to confirm the bounded-window TTL (not the now=0 epoch TTL).
        "@crates_mcp_re//:redis",
    ],
)
# MCPS-84 (ADR-MCPS-049 W2): live Redis trust-epoch source — an INCR on another
# connection surfaces as FlushAll.
nt_rust_test(
    name = "redis_trust_epoch_e2e_test",
    srcs = ["tests/redis_trust_epoch_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_REDIS_URL",
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "@crates_mcp_re//:redis",
    ],
)
# #69 (epic #68 v0.4 Axis 1): cross-node replay rejection + bounded lease TTL over
# a SHARED etcd (the CP / LINEARIZABLE backend). Self-skips (prints + passes)
# unless MCP_RE_TEST_ETCD_URL is set, so it is green without a live etcd yet proves
# multi-node linearizable replay safety when one is provided
# (Mac: `brew install etcd`, then run with --enable-v2=false v3 gateway on :2379).
nt_rust_test(
    name = "cpstore_etcd_e2e_test",
    srcs = ["tests/cpstore_etcd_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_ETCD_URL",
        # CI opt-in: when set, a missing-infra SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
        # The live TTL probe base64-encodes the key + drives the etcd v3 gateway.
        "@crates_mcp_re//:base64",
        "@crates_mcp_re//:ureq",
    ],
)

# #4034: PKCS#11 sign+verify against a HERMETIC in-tree mock provider
# (tests/mock-pkcs11). Under `cargo` the test builds + loads the mock and RUNS for
# real; under the Bazel sandbox (no `cargo`) it self-skips. The mock is not a Bazel
# target — it is built on demand by the test — so no extra srcs/deps are wired here.
nt_rust_test(
    name = "pkcs11_keysource_e2e_test",
    srcs = ["tests/pkcs11_keysource_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        # CI opt-in: when set, a missing-mock SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        # #220 (ADR-048): the e2e mints a CA/leaf + rustls config to drive a real
        # mTLS handshake against the PKCS#11 signer; these test deps match Cargo.toml.
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# #4030: online OCSP Good/Revoked against an `openssl ocsp` test responder.
# Self-skips unless MCP_RE_TEST_OCSP_RESPONDER_URL (+ DER paths) is set.
nt_rust_test(
    name = "ocsp_e2e_test",
    srcs = ["tests/ocsp_e2e_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    env_inherit = [
        "MCP_RE_TEST_OCSP_RESPONDER_URL",
        "MCP_RE_TEST_OCSP_ISSUER_DER",
        "MCP_RE_TEST_OCSP_GOOD_DER",
        "MCP_RE_TEST_OCSP_REVOKED_DER",
        # CI opt-in: when set, a missing-infra SKIP HARD-FAILS instead of passing.
        "MCP_RE_REQUIRE_LIVE_INFRA",
    ],
    deps = [
        ":mcp_re_proxy_ext",  # keep
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde_json",
        "@crates_mcp_re//:rcgen",
    ],
)

# ===========================================================================
# Phase 1 OCI packaging of the PRODUCTION proxy artifact (mcp_re_proxy_ext).
#
# The lean `:mcp_re_proxy_cli` binary (src/main.rs + the default `:mcp_re_proxy`
# library) is unchanged. This is the SAME main.rs compiled against the
# external-backends `:mcp_re_proxy_ext` library flavor (the three Mac-buildable
# optional features), then cross-compiled to linux/amd64 and packaged into a
# single-arch distroless image. linux/amd64 ONLY for v1 (no arm64, no
# oci_image_index).
# ===========================================================================

# The production binary: same src/main.rs the lean CLI uses, but linked against
# the ext library flavor and built with the external-backend features (mirrors
# `:mcp_re_proxy_cli`, swapping `:mcp_re_proxy` -> `:mcp_re_proxy_ext` and adding the
# ext features).
nt_rust_binary(
    name = "mcp_re_proxy_ext_bin",
    srcs = ["src/main.rs"],
    crate_features = _PROXY_EXT_FEATURES,
    edition = "2021",
    # _PROXY_EXT_DEPS already includes //mcp-re-policy:mcp_re_policy (via
    # _PROXY_LIB_DEPS), so it is NOT relisted here — the lean CLI lists it
    # explicitly only because its lean dep set (`:mcp_re_proxy`) does not.
    deps = [":mcp_re_proxy_ext"] + _PROXY_EXT_DEPS,  # keep
)

# Cross-compile the ext binary to the linux/amd64 image platform (from darwin).
platform_transition_filegroup(
    name = "mcp_re_proxy_ext_linux_x86_64",
    srcs = [":mcp_re_proxy_ext_bin"],
    target_platform = "//platforms:linux_x86_64",
)

# Package the cross-compiled binary (+ its runfiles) under /app in the image.
pkg_tar(
    name = "mcp_re_proxy_ext_layer_x86_64",
    srcs = [":mcp_re_proxy_ext_linux_x86_64"],
    include_runfiles = True,
    package_dir = "/app",
)

# The single-arch linux/amd64 distroless image.
oci_image(
    name = "mcp_re_proxy_ext_image",
    # Single-arch: reference the platform-specific base repo directly (the
    # multi-platform `@distroless_cc_base` alias only resolves under a matching
    # incoming platform transition; this image is unconditionally linux/amd64).
    base = "@distroless_cc_base_linux_amd64",
    entrypoint = ["/app/mcp_re_proxy_ext_bin"],
    tars = [":mcp_re_proxy_ext_layer_x86_64"],
    workdir = "/app",
)

# Load the image into the local Docker daemon for verification.
oci_load(
    name = "mcp_re_proxy_ext_load",
    image = ":mcp_re_proxy_ext_image",
    repo_tags = ["mcp-re-proxy-ext:latest"],
)

# Push to the container registry. Defined only — DO NOT run without creds.
oci_push(
    name = "mcp_re_proxy_ext_push",
    image = ":mcp_re_proxy_ext_image",
    remote_tags = ["latest"],
    repository = "ghcr.io/matssun/code/mcp-re-proxy-ext",
)
