[package]
name = "mcp-re-stdio-bridge"
version = "0.10.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ADR-MCPRE-051 (Phase B): an OUT-OF-TCB stdio<->HTTP adapter. Fronts an unmodified local stdio MCP server (launched + sandboxed as a subprocess) behind a plain HTTP endpoint so the mcp-re-proxy PEP can protect it via its stateless HTTP inner plane. The subprocess/sandbox/rlimit/env attack surface lives HERE, outside the cryptographic trust boundary — never in the signing PEP."

[dependencies]
# ADR-MCPRE-051 Phase B / task C3: the security-hardened subprocess inner
# (SubprocessInner / PersistentSubprocessInner + InnerLaunchConfig + the
# Landlock/seccomp SandboxProfile + RLimits) now lives IN this crate, moved out of
# the mcp-re-proxy PEP so the signing PEP provably links none of the
# subprocess/sandbox code. The reverse dependency on mcp-re-proxy is CUT.
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
# The relocated subprocess/inner-launch code frames the inner server's JSON-RPC
# stdout and emits structured JSON diagnostics.
serde_json = { workspace = true }
# MCPS-037 (ADR-MCPS-016): Unix setrlimit(2)/kill(2)/fcntl(2) for inner-server
# resource hardening + fd-leak closure. Used unconditionally on the launch path.
libc = { workspace = true }

# #4039: Linux kernel sandbox crates. Target-gated (NOT feature-gated): present in
# the dependency graph ONLY on Linux, so the Mac dev build never compiles or links
# them. The enforcement code is behind #[cfg(target_os = "linux")].
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[[bin]]
name = "mcp-re-stdio-bridge"
path = "src/main.rs"
